# cjm-plugin-system

./: .gitignore  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  bootstrap.html  bootstrap.html.md  cli.html  cli.html.md  index.html  index.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  test_plugin_system.py
cjm_plugin_system/: _modidx.py  bootstrap.py  cli.py
cjm_plugin_system/core/: _telemetry.py  ports.py  (+20 more)
core/: adapter.html  adapter_manifest.html  capability.html  capability.html.md  config.html  config.html.md  config_store.html  config_store.html.md  diagnostics_store.html  diagnostics_store.html.md  empirical_store.html  empirical_store.html.md  errors.html  errors.html.md  interface.html  interface.html.md  journal_store.html  journal_store.html.md  manager.html  manager.html.md  manifest_format.html  manifest_format.html.md  metadata.html  metadata.html.md  platform.html  platform.html.md  ports.html  ports.html.md  proxy.html  proxy.html.md  queue.html  queue.html.md  scheduling.html  scheduling.html.md  secret_store.html  secret_store.html.md  telemetry.html  telemetry.html.md  wire.html  wire.html.md  (+2 more)
nbs/: bootstrap.ipynb  cli.ipynb  index.ipynb  nbdev.yml
scripts/: README.md  cascade_manifests.py
tests_manual/: cleanup.txt  initialize.txt  test_federation.py  test_graph_federation.py  test_job_queue.py  test_media_vad.py  test_text_nltk.py  validate_stage7_observability_e2e.py
utils/: cache_paths.html  cache_paths.html.md  hashing.html  hashing.html.md  validation.html  validation.html.md
(+28 files in other folders)
