[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-plugin-system"
dynamic = ["version"]
description = "Process-isolated plugin system with resource-aware scheduling, configuration validation, and lifecycle management for extensible Python applications."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm_error_handling', 'fastapi', 'psutil', 'uvicorn', 'httpx', 'typer', 'pyyaml']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-plugin-system"
Documentation = "https://cj-mills.github.io/cjm-plugin-system"

[project.entry-points.nbdev]
cjm_plugin_system = "cjm_plugin_system._modidx:d"


[project.scripts]
cjm-ctl = "cjm_plugin_system.cli:app"

[tool.setuptools.dynamic]
version = {attr = "cjm_plugin_system.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_plugin_system"]

[tool.nbdev]
